--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "ember-qunit": "0.1.8",
     "ember-qunit-notifications": "0.0.4",
     "qunit": "~1.15.0",
-    "moment": "~2.8.3"
+    "moment": "~2.8.3",
+    "lodash": "~2.4.1",
+    "fullcalendar": "~2.1.1"
   }
 }
