Added user authentication using ember-simple-auth-oauth2

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "qunit": "~1.15.0",
     "moment": "~2.8.3",
     "lodash": "~2.4.1",
-    "fullcalendar": "~2.1.1"
+    "fullcalendar": "~2.1.1",
+    "ember-simple-auth": "0.6.7"
   }
 }
