--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,20 @@
 {
   "name": "support-hero-client",
   "dependencies": {
-    "handlebars": "~1.3.0",
-    "jquery": "^1.11.1",
+    "bootstrap-sass-official": "~3.2.0",
     "ember": "1.7.0",
-    "ember-data": "1.0.0-beta.10",
-    "ember-resolver": "~0.1.7",
-    "loader.js": "stefanpenner/loader.js#1.0.1",
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "rwjblue/ember-cli-test-loader#0.0.4",
+    "ember-data": "1.0.0-beta.10",
     "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.2",
     "ember-qunit": "0.1.8",
     "ember-qunit-notifications": "0.0.4",
-    "qunit": "~1.15.0",
+    "ember-resolver": "~0.1.7",
+    "ember-simple-auth": "0.6.7",
+    "handlebars": "~1.3.0",
+    "jquery": "^1.11.1",
+    "loader.js": "stefanpenner/loader.js#1.0.1",
     "moment": "~2.8.3",
-    "ember-simple-auth": "0.6.7"
+    "qunit": "~1.15.0",
   }
 }
