--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,6 @@
     "jquery": "^1.11.1",
     "loader.js": "stefanpenner/loader.js#1.0.1",
     "moment": "~2.8.3",
-    "qunit": "~1.15.0",
+    "qunit": "~1.15.0"
   }
 }
