--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "ember-cli-simple-auth": "^0.6.7",
+    "ember-cli-simple-auth-oauth2": "^0.6.7"
+  },
   "devDependencies": {
     "body-parser": "^1.2.0",
     "broccoli-asset-rev": "0.3.1",
@@ -28,8 +32,6 @@
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.1.0",
-    "ember-cli-simple-auth": "^0.6.7",
-    "ember-cli-simple-auth-oauth2": "^0.6.7",
     "ember-data": "^1.0.0-beta.11",
     "ember-export-application-global": "^1.0.0",
     "ember-validations": "~2.0.0-alpha.1",
