--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "ember-cli-content-security-policy": "^0.3.0",
     "ember-cli-simple-auth": "^0.6.7",
-    "ember-cli-simple-auth-oauth2": "^0.6.7"
+    "ember-cli-simple-auth-oauth2": "^0.6.7",
+    "ember-validations": "~2.0.0-alpha.1"
   },
   "devDependencies": {
     "body-parser": "^1.2.0",
@@ -28,13 +30,11 @@
     "broccoli-sass": "^0.3.0",
     "ember-cli": "0.1.2",
     "ember-cli-bootstrap": "0.0.12",
-    "ember-cli-content-security-policy": "^0.3.0",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.1.0",
     "ember-data": "^1.0.0-beta.11",
     "ember-export-application-global": "^1.0.0",
-    "ember-validations": "~2.0.0-alpha.1",
     "express": "^4.8.5",
     "glob": "^4.0.5"
   }
