--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "ember-qunit": "0.1.8",
     "ember-qunit-notifications": "0.0.4",
     "ember-resolver": "~0.1.7",
-    "ember-simple-auth": "~0.6.7",
+    "ember-simple-auth": "0.6.7",
     "ember-validations-shiv": "1.0.0-beta.2",
     "handlebars": "~1.3.0",
     "jquery": "^1.11.1",
